Regression: Mirror Vertex Weights gives unpredictable results #101773

Closed
opened 2022-10-12 14:37:43 +02:00 by Keith Boshoff · 9 comments
Member

Simplified Report

  • Execute Weights > Mirror on the vertex group in the attached file.
  • Notice how it corrupt somehow.

vertexGroupMirror.blend

Before Mirror:

20221012-150031.png

After Mirror:

20221012-150050.png

Caused by: 05952aa94d

Original Report

System Information
Operating system: Windows 10
Graphics card: NVidia GTX 960

Blender Version
Broken: 3.4+
Worked: 3.3

When mirroring vertex groups in the Weight Editor it gives results that are nearly random, even ignoring selection.

Exact steps for others to reproduce the error

  • Open the attached scene (see below)
  • Enter Weight mode
  • Execute the Mirror Operator: Weights > Mirror
  • Check All Groups in operator parameters
  • My results are practically random despite perfect symmetry in the mesh. (I also have more complex meshes crash Blender when mirroring vertices in 3.4)

MirrorWeightsTest.blend1

## Simplified Report - Execute Weights > Mirror on the vertex group in the attached file. - Notice how it corrupt somehow. [vertexGroupMirror.blend](https://archive.blender.org/developer/F13667208/vertexGroupMirror.blend) Before Mirror: ![20221012-150031.png](https://archive.blender.org/developer/F13667203/20221012-150031.png) After Mirror: ![20221012-150050.png](https://archive.blender.org/developer/F13667204/20221012-150050.png) Caused by: 05952aa94d33eeb504fa63618ba35c2bcc8bd19b ## Original Report **System Information** Operating system: Windows 10 Graphics card: NVidia GTX 960 **Blender Version** Broken: 3.4+ Worked: 3.3 When mirroring vertex groups in the Weight Editor it gives results that are nearly random, even ignoring selection. **Exact steps for others to reproduce the error** - Open the attached scene (see below) - Enter Weight mode - Execute the Mirror Operator: Weights > Mirror - Check All Groups in operator parameters - My results are practically random despite perfect symmetry in the mesh. (I also have more complex meshes crash Blender when mirroring vertices in 3.4) [MirrorWeightsTest.blend1](https://archive.blender.org/developer/F13667007/MirrorWeightsTest.blend1)
Author
Member

Added subscriber: @Wahooney

Added subscriber: @Wahooney
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Omar Emara changed title from Mirror Vertex Weights gives unpredictable results to Regression: Mirror Vertex Weights gives unpredictable results 2022-10-12 15:04:20 +02:00
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Bisecting.

Bisecting.
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Bisected to 05952aa94d.

Bisected to 05952aa94d33eeb504fa63618ba35c2bcc8bd19b.
Hans Goudey self-assigned this 2022-10-12 15:56:31 +02:00
Member

Thanks for the report and bisecting.

Thanks for the report and bisecting.

This issue was referenced by a35d5378ad

This issue was referenced by a35d5378addfb2aa27f0202dffe3f4e0256660ff
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101773
No description provided.