Fix T101773: Mirror Vertex Weights operator broken